--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.freemarker.template-loader-path:classpath:/templates
-spring.freemarker.suffix:.ftl
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.suffix=.ftl
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.request-context-attribute=request
 spring.freemarker.cache=false
@@ -28,7 +28,6 @@ SE_NODE_MAX_SESSIONS=4
 server.servlet.session.cookie.path=/
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.name=jdq
-
 #spring.datasource.url=jdbc:sqlite:/go-cqhttp/db.sqlite
 #spring.datasource.driver-class-name=org.sqlite.JDBC
 #mybatis.mapper-locations=classpath:mapping/*Mapper.xml
